--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -8,10 +8,10 @@
 	<title>Survey</title>
 </head>
 <body>
-	<h1>Hello World!</h1>
+	<h1>Survey</h1>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-	<script src="../data/friends.js"></script>
+	<script src=""></script>
 </body>
 </html>
