--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -125,25 +125,6 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  <script>
-
-    $("button").click( function() {
-      event.preventDefault();
-      let obj = new DataObj();
-      
-    });
-
-    let DataObj = function() {
-      this.name = $('#name-input').val().trim();
-      this.photo = $('#photo-input').val().trim();
-      this.scores = [];
-      for (let i = 1; i < 11; i++) {
-        score = $(`#q${i}-select`).val();
-        this.scores.push(score);
-      }
-      console.log(this);
-    };
-
-  </script>
+  <script src="client.js"></script>
 </body>
 </html>
