Added survey questions

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -23,7 +23,7 @@
       <input type="text" class="form-control" id="photo-input" placeholder="Enter the address of your image">
     </div>
     <div class="form-group">
-      <label for="q1-select">Question 1</label>
+      <label for="q1-select">I find unpredictable situations exhilarating.</label>
       <select class="form-control" id="q1-select">
         <!-- <option disabled selected value> -- Select an Response -- </option> -->
         <option value="1">Strongly Disagree</option>
@@ -34,7 +34,7 @@
       </select>
     </div>
     <div class="form-group">
-      <label for="q2-select">Question 2</label>
+      <label for="q2-select">I do things on the spur of the moment.</label>
       <select class="form-control" id="q2-select">
         <!-- <option disabled selected value> -- Select an Response -- </option> -->
         <option value="1">Strongly Disagree</option>
@@ -45,7 +45,7 @@
       </select>
     </div>
     <div class="form-group">
-      <label for="q3-select">Question 3</label>
+      <label for="q3-select">I am more optimistic than most people.</label>
       <select class="form-control" id="q3-select">
         <!-- <option disabled selected value> -- Select an Response -- </option> -->
         <option value="1">Strongly Disagree</option>
@@ -56,7 +56,7 @@
       </select>
     </div>
     <div class="form-group">
-      <label for="q4-select">Question 4</label>
+      <label for="q4-select">I am more creative than most people.</label>
       <select class="form-control" id="q4-select">
         <!-- <option disabled selected value> -- Select an Response -- </option> -->
         <option value="1">Strongly Disagree</option>
@@ -67,7 +67,7 @@
       </select>
     </div>
     <div class="form-group">
-      <label for="q5-select">Question 5</label>
+      <label for="q5-select">I have more energy than most people.</label>
       <select class="form-control" id="q5-select">
         <!-- <option disabled selected value> -- Select an Response -- </option> -->
         <option value="1">Strongly Disagree</option>
@@ -78,7 +78,7 @@
       </select>
     </div>
     <div class="form-group">
-      <label for="q6-select">Question 6</label>
+      <label for="q6-select">On my time off, I like to be free to do whatever looks fun.</label>
       <select class="form-control" id="q6-select">
         <!-- <option disabled selected value> -- Select an Response -- </option> -->
         <option value="1">Strongly Disagree</option>
@@ -89,7 +89,7 @@
       </select>
     </div>
     <div class="form-group">
-      <label for="q7-select">Question 7</label>
+      <label for="q7-select">I would describe myself as an extremely competent person</label>
       <select class="form-control" id="q7-select">
         <!-- <option disabled selected value> -- Select an Response -- </option> -->
         <option value="1">Strongly Disagree</option>
@@ -100,7 +100,7 @@
       </select>
     </div>
     <div class="form-group">
-      <label for="q8-select">Question 8</label>
+      <label for="q8-select">My friends and family would say I have traditional values.</label>
       <select class="form-control" id="q8-select">
         <!-- <option disabled selected value> -- Select an Response -- </option> -->
         <option value="1">Strongly Disagree</option>
@@ -111,7 +111,7 @@
       </select>
     </div>
     <div class="form-group">
-      <label for="q9-select">Question 9</label>
+      <label for="q9-select">I would rather have loyal friends than interesting friends.</label>
       <select class="form-control" id="q9-select">
         <!-- <option disabled selected value> -- Select an Response -- </option> -->
         <option value="1">Strongly Disagree</option>
@@ -122,7 +122,7 @@
       </select>
     </div>
     <div class="form-group">
-      <label for="q10-select">Question 10</label>
+      <label for="q10-select">I tend to be cautious, but not fearful.</label>
       <select class="form-control" id="q10-select">
         <!-- <option disabled selected value> -- Select an Response -- </option> -->
         <option value="1">Strongly Disagree</option>
