--- a/app/public/home.html
+++ b/app/public/home.html
@@ -5,10 +5,38 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<title>Home</title>
+	<link rel="stylesheet" href="style.css">
+	<title>Friend-Finder Home</title>
 </head>
 <body>
-  <h1>Home Page</h1>
+
+
+	<div class="jumbotron jumbotron-fluid">
+		<div class="container">
+			<h1 class="display-3">Welcome to Friend-Finder</h1>
+			<p class="lead">Take our patented survey to find your match today!</p>
+		</div>
+	</div>
+
+	<div class="text-center">
+		<a href="survey.html">
+			<button class="btn btn-large btn-info" id="survey">
+				<span class="glyphicon glyphicon-list-alt"></span> Take the Survey
+			</button>
+		</a>
+	</div>
+	<div class="text-center">
+		<a href="api/friends">
+			View the raw API data	
+		</a>
+	</div>
+
+
+	<footer>
+			<a href="api/friends">API</a>
+			<a href="/">Home</a>
+			<a href="/survey">Survey</a>
+		</footer>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
